--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thruway/router",
+    "name": "albundy/thruway",
     "description": "Thruway WAMP router core",
     "license": "MIT",
     "keywords": [
