--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "thruway/client": "^0.5.0",
         "react/event-loop": "^1.0 || ^0.5 || ^0.4.3",
         "react/promise": "^2.3.0",
-        "albundy/ratchet-transport": "0.5.1"
+        "albundy/ratchet-transport": "0.5.1.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^8",
